--- a/Pra_Singh_MyFavouriteSports/package.json
+++ b/Pra_Singh_MyFavouriteSports/package.json
@@ -7,9 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gencomponent":"npm run-script generatecomponent",
-    "genpipe":"npm run-script generatepipe",
-    "gendirective":"npm run-script generateddirective"
+    "gencomponent": "npm run-script generatecomponent",
+    "genpipe": "npm run-script generatepipe",
+    "gendirective": "npm run-script generatedirective",
+    "genservice": "npm run-script generate service"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "ig": "^0.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
